--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:textColor="@color/colorAccent"/>
 
     <EditText
-        android:id="@+id/message"
+        android:id="@+id/messageToSend"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/phone"
@@ -41,5 +41,5 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="113dp"
         android:text="@string/button"
-        android:textColor="@color/colorPrimaryDark"/>
+        android:textColor="@color/colorPrimaryDark" />
 </RelativeLayout>
